# hexitec-detector

./: .gitignore  .project  .travis-install-blosc.sh  .travis-install-hdf5.sh  .travis-install-odin.sh  .travis.yml  README.md  python.travis.yml  requirements.txt
control/: .coveragerc  MANIFEST.in  README.md  odin_config.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
control/XTH_meta_test/: spl_1.ang  spl_1.ctinfo.xml  spl_1.ctprofile.xml  spl_1.xtekct  spl_1_01.xtekct
control/config/: 2x6_control.cfg  2x6_control_1N.cfg  2x6_control_2N.cfg  2x6_control_3N.cfg  2x6_control_4N.cfg  2x6_control_5N.cfg  2x6_control_6N.cfg  2x6_control_8N.cfg  2x6_dev_2N.cfg  2x6_farm_mode.json  archiver.cfg  enables_random_values.ini  epac1005_4_nodes_control.cfg  epac1005_control.cfg  epac1005_farm_mode.json  epac_hdaq_control.cfg  epac_hdaq_farm_mode.json  farm_mode1.json  farm_mode2.json  farm_mode3.json  farm_mode4.json  farm_mode5.json  farm_mode6.json  farm_mode8.json  farm_mode_dev2.json  hexidaq_4_nodes_control.cfg  hexidaq_control.cfg  hexidaq_control_fake_archy.cfg  hexidaq_hw_single.cfg  hexidaq_test_control.cfg  hexitec.cfg  hexitecVSR.ini  hexitec_2x6.ini  hexitec_detector.cfg  hexitec_dev_ext.cfg  hexitec_dev_pc.cfg  hexitec_double_viewer.cfg  hexitec_double_viewer_farm_mode.json  hexitec_double_viewer_multi.cfg  hexitec_dummy_farm_mode.cfg  (+21 more)
control/config/char_tests/: _tmp_store_RTHSiHdf_SiLv.json  _tmp_store_RTHSiHdf_SiLv_mod.json  _tmp_store_RTHhdf.json  _tmp_store_ubuntu_Rhdf.json
control/fem_api_extension/: fem_api_wrapper.c
control/fem_api_extension/api/: Makefile  generate_fem_api_parameters.py
control/fem_api_extension/api/include/: ExcaliburFemClient.h  ExcaliburFrontEndDevices.h  ExcaliburPersonality.h  ExcaliburPowerCardDevices.h  FemApiError.h  FemClient.h  FemClientAcquisition.h  FemDataReceiver.h  FemException.h  FemLogger.h  FemTransaction.h  asicControlParameters.h  dataTypes.h  femApi.h  mpx3Parameters.h  protocol.h
control/fem_api_extension/api/src/: ExcaliburFemClient.cpp  ExcaliburFemClientAsicControl.cpp  ExcaliburFemClientFrontEndDevices.cpp  ExcaliburFemClientMpx3.cpp  ExcaliburFemClientPersonality.cpp  ExcaliburFemClientPowerCardDevices.cpp  ExcaliburFemClientScan.cpp  FemApiError.cpp  FemClient.cpp  FemClientAcquisition.cpp  FemClientBusses.cpp  FemClientHardwareDevices.cpp  FemDataReceiver.cpp  FemException.cpp  FemPersonality.cpp  FemTransaction.cpp  FemUDP.cpp  femApi.cpp
control/fem_api_extension/api_stub/: FemApiError.cpp  FemApiError.h  femApi.cpp  femApi.h
control/hexitec/: FileInterface.py  HexitecDAQ.py  HexitecDetectorAdapter.py  HexitecFem.py  HexitecHardwareInterface.py  ImageStreamUDP.py  QemCam.py  RdmaUDP.py  adapter.py  detector.py  detector_old.py  fem.py  fem_api_parameters.py  parameter.py  test_gui.py
control/hexitec/client/: __init__.py  client.py  config_parser.py  test_app.py
control/hexitec/test_ui/: ImageStreamUDP.py  QemCam.py  RdmaUDP.py  test_gui.py
control/hexitec/testing/: test_adapter.py  test_detector.py  test_fem.py  test_plugin.py
control/src/hexitec/: ALL_RDMA_REGISTERS.py  BoardCfgStatus.py  FileInterface.py  GenerateConfigFiles.py  HEX_RDMA_REGISTERS.py  HexitecDAQ.py  HexitecFem.py  HexitecRdmaStatuses.py  HexitecRdmaTest.py  QemCam.py  RDMA_REGISTERS.py  RdmaUDP.py  RdmaUdp.py  SequenceOn.py  UART_RDMA_REGISTERS.py  UDP_CORE_RDMA_REGISTERS.py  VSR_FPGA_REGISTERS.py  VSR_RDMA_REGISTERS.py  VsrModule.py  _version.py  adapter.py  archiver.py  archiver_test.py  archiver_test_fishy.py  calculate_frame_rate.py  calculate_umid_conversion.py  characterise_coefficients_file.py  init_lvds_script.py  init_lvds_test.py  live_histogram_adapter.py  rdma_register_helpers.py  readout_hexidaq.py  readout_manc.py  temp_file.py  udp_config_multicast_script.py  udp_config_multicast_script_4Ns.py  udp_setup_fw_interfaces.py  write_to_disc.py
control/src/hexitec/rdma_control/: BoardCfgStatus.py  HexitecRdmaTest.py  RdmaUdp.py  RdmaXml2Vhdl.py  VSR_FPGA_REGISTERS.py  VsrModule.py
control/src/hexitec/test_ui/: Hexitec100Producer.py  Hexitec1x1ProdTest.py  Hexitec1x1Producer.py  Hexitec2x2Producer.py  Hexitec2x6.py  HexitecBias.py  HexitecExtractor.py  HexitecMultiProducer.py  HexitecNodesProducer.py  HexitecSanityChecker.py  HexitecSender.py  (+21 more)
control/static/: index.html
control/static/configs/: execute_sequence_1.json  execute_sequence_10.json  execute_sequence_5.json  execute_sequence_8.json  store_sequence_10_1x1.json  store_sequence_10_2x2.json  store_sequence_11_1x1.json  store_sequence_11_2x2.json  store_sequence_12_1x1.json  store_sequence_12_2x2.json  store_sequence_1_1x1.json  store_sequence_1_2x2.json  store_sequence_2_1x1.json  store_sequence_2_2x2.json  store_sequence_3_1x1.json  store_sequence_3_2x2.json  store_sequence_4_1x1.json  store_sequence_4_2x2.json  store_sequence_5_1x1.json  store_sequence_5_2x2.json  store_sequence_6_1x1.json  store_sequence_6_2x2.json  store_sequence_7_1x1.json  store_sequence_7_2x2.json  store_sequence_8_1x1.json  store_sequence_8_2x2.json  store_sequence_9_1x1.json  store_sequence_9_2x2.json
control/static/css/: bootstrap.min.css  odin-server.css
control/static/js/: live_his.js  live_view.js  my_server.js  odin_control.js  odin_server.js
control/test/config/: Default_SPM.dacs  Default_SPM2.dacs  stfcnotext.mask  triangle.mask  udp_config.json
data/frameProcessor/src/: CMakeLists.txt  HexitecAdditionPlugin.cpp  HexitecCalibrationPlugin.cpp  HexitecDiscriminationPlugin.cpp  HexitecHistogramPlugin.cpp  HexitecNextFramePlugin.cpp  HexitecProcessPlugin.cpp  HexitecReorderPlugin.cpp  HexitecStackedPlugin.cpp  HexitecSummedImagePlugin.cpp  HexitecTemplatePlugin.cpp  HexitecTemplatesPlugin.cpp  HexitecThresholdPlugin.cpp
data/frameProcessor/test/: CMakeLists.txt  HexitecFrameProcessorTest.cpp
data/frameReceiver/src/: CMakeLists.txt  HexitecFrameDecoder.cpp  HexitecFrameDecoderLib.cpp
data/frameSimulator/src/: CMakeLists.txt  HexitecFrameSimulatorPlugin.cpp
data/test/integrationTest/: CMakeLists.txt  dataset_check.py  dataset_check_histogram.py
(+311 files in other folders)
