[metadata]
name = hexitec
description = Odin Detector Adapters for Hexitec
url = https://github.com/stfc-aeg/hexitec-detector
author = Christian Angelsen
author_email = christian.angelsen@stfc.ac.uk
license = Apache License 2.0
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    =src

install_requires =
    attrs
    cachetools
    certifi
    chardet
    charset-normalizer
    colorama
    contourpy
    coverage
    cycler
    distlib
    exceptiongroup
    filelock
    fonttools
    future
    h5py
    idna
    iniconfig
    kiwisolver
    matplotlib
    numpy==1.24.2
    opencv-python
    packaging
    Pillow
    platformdirs
    pluggy
    ply
    posix-ipc
    psutil
    pyasn1
    pycryptodomex
    pygelf
    pyparsing
    pyproject_api
    pysmi
    pysnmp
    pytest==7.2.1
    pytest-cov
    python-dateutil
    pyzmq
    requests
    six
    tomli
    tornado
    tox
    urllib3==1.26.14
    virtualenv

[options.extras_require]
dev =
    mock;python_version<'3'
    pytest-asyncio
    pytest-cov
    # pytest==7.2.1
    # requests
    # tox

[options.packages.find]
where = src

[options.entry_points]
# Include a command line script
console_scripts =
    odin_server = odin.main:main_deprecate
    odin_control = odin.main:main

[flake8]
max-line-length = 100

[coverage:run]
omit = src/hexitec/_version.py
# Note only applies when running pytest - for tox run it is overriden in the ini config
data_file = /tmp/odin.coverage

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/

[versioneer]
VCS = git
style = pep440
versionfile_source = src/hexitec/_version.py
versionfile_build = hexitec/_version.py
tag_prefix=
