install(FILES config/hexitec2x2.json DESTINATION test_config)
install(FILES config/hexitec2x2-average.json DESTINATION test_config)
install(FILES config/hexitec2x2-fp.json DESTINATION test_config)
install(FILES config/hexitec2x2-fp-average.json DESTINATION test_config)
install(FILES config/hexitec2x2-fr.json DESTINATION test_config)
install(FILES config//test2x2-average.json DESTINATION test_config)
install(FILES config/test-average.json DESTINATION test_config)
install(FILES config/test.json DESTINATION test_config)
install(DIRECTORY config/patterns DESTINATION test_config)
install(FILES dataset_check.py DESTINATION test_config)